# mcp-chatbot

./: .env  .gitignore  README.md  mcp_chatbot.py  pyproject.toml  requirements.txt  research_server.py  weather_server.py
utils/: gemini_client.py
